S28 3164: Report Update - Completed Capture Sessions (Recordings)  (#888)