@@ -144,9 +144,9 @@ public class ReportService {
         return recordingRepository
             .findAllByParentRecordingIsNull()
             .stream()
+            .sorted(Comparator.comparing(r -> r.getCaptureSession().getBooking().getScheduledFor()))
             .map(CompletedCaptureSessionReportDTO::new)
-            .sorted(Comparator.comparing(CompletedCaptureSessionReportDTO::getScheduledFor))
-            .toList();
+            .collect(Collectors.toList());
     }
 
     @Transactional
